--- a/templates/next.html
+++ b/templates/next.html
@@ -178,7 +178,7 @@ function showTable(jsonData) {
                                     <div class="col-2">
                                         <div class="input-group-desc">
                                             <h4 id="Log-text" style="font-family: sans-serif; transform: translate(250%,50%); display: none; color: black;">Logs</h4>
-                                                   <ul class="disabled" id="logList" style="display: none;"></ul>
+                                                   <ull class="disabled" id="logList" style="display: none;"></ull>
           <div class="disabled" id="loading" style="display: none;"></div>
                                         </div>
                                     </div>
