Change the gbert-clinical to medbertde

--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@ var dynamicInput_1 = [];
                                     <input type="radio" checked="checked" name="model_para" value="gbert-base" required>
                                     <span class="checkmark"></span>
                                 </label>
-                                <label class="radio-container">gbert-base-clinical
+                                <label class="radio-container">medbertde
                                     <input type="radio" name="model_para" value="gbert-base-clinicalL" required>
                                     <span class="checkmark"></span>
                                 </label>
