--- a/templates/login.html
+++ b/templates/login.html
@@ -36,7 +36,7 @@
             <div class="card card-5">
                 <div class="card-heading">
                     <div class="title">PETGUI Login</div>
-                    <button class="btn home-btn home-btn:hover" onclick="window.location.href = '/start';">START <i class="fa fa-home"></i></button>
+                    <button class="btn home-btn home-btn:hover" onclick="window.location.href = '/start';">HOME <i class="fa fa-home"></i></button>
                 </div>
                 {% if logout_msg %}
                 <div class="alert alert-success">{{ logout_msg }}</div>
