--- a/templates/start.html
+++ b/templates/start.html
@@ -43,14 +43,26 @@
 #col-2 {
   flex: 1;
   margin-left: 12%;
-
 }
 
-   .logout-btn {
+   .login-btn {
     position: absolute;
     top: 0%;
     transform: translateY(-50%, 50%);
     right: 0;
+    color: lightgrey;
+    align-items: center;
+    padding: 15px 25px;
+    }
+
+    .login-btn:hover {
+    color: white;
+    }
+
+   .logout-btn {
+    position: absolute;
+    top: 0%;
+    left: 0;
     color: lightgrey;
     align-items: center;
     padding: 15px 25px;
@@ -67,12 +79,13 @@
             <div class="card card-5">
                 <div class="card-heading">
                     <div class="title">Welcome to PETGUI!</div>
-                    <button class="btn logout-btn logout-btn:hover" onclick="Login()">Login <i class="fa fa-sign-in"></i></button>
+                    <button class="btn logout-btn logout-btn:hover" onclick="Logout()">LOGOUT <i class="fa fa-power-off"></i></button>
+                    <button class="btn login-btn login-btn:hover" onclick="Login()">LOGIN <i class="fa fa-sign-in"></i></button>
                 </div>
                 <div class="card-body">
                     <h4 class="mb-4"> We introduce <span style="color: purple; font-weight: bold;">PETGUI</span>: A user-friendly interface for training and testing a language model through <b>P</b>attern <b>E</b>xploiting <b>T</b>raining (PET).<br>
                     </h4>
-                    <h4 class="mb-4" style="font-style: italic" align="center">Pattern Exploiting Training</h4>
+                    <h4 class="mb-4" style="font-style: italic; background: rgb(86, 106, 238, 0.2);" align="center">Pattern Exploiting Training</h4>
                     <p style="font-size: 15px;"><span style="font-style: italic">PET</span> was introduced in 2020 as a <strong>semi-supervised training strategy for language models</strong>.
                         By reformulating input examples as cloze-style phrases, <span style="font-style: italic">PET</span> has been shown to significantly outperform standard supervised training.
                    <section class="container" style="margin-top: 15px;">
@@ -86,7 +99,7 @@
                     </div>
                     </section>
 
-                    <h3 class="mb-4" style="margin-top: 3rem">Features</h3>
+                    <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">Features</h3>
                     <p style="font-size: 15px;"> This GUI offers a step-by-step approach to training and deploying a language model on <span style="font-style: italic">PET</span>.
                         More concretely, with <span style="color: purple; font-weight: bold;">PETGUI</span> you can choose to: </p>
                         <ul style="margin-left: 17px; font-size: 15px;">
@@ -95,7 +108,7 @@
                             <li>Download statistics on <b>model performance</b> during training and the resulting predictions file</li>
                             <li>See <b>statistics on label distribution</b> of the provided dataset</li>
                         </ul>
-                    <h3 class="mb-4" style="margin-top: 3rem">Limitations</h3>
+                    <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">Limitations</h3>
                     <p style="font-size: 15px;">In its current form, <span style="color: purple; font-weight: bold;">PETGUI</span> is limited to training and testing a model on data in the following way:</p>
                         <ul style="margin-left: 17px; font-size: 15px;">
                             <li> <b>File format and naming convention</b>: The provided training data must be a <span style="font-style: italic">tar.gz</span> file
@@ -104,13 +117,13 @@
                                 first colum at the beginning of each line</li>
                             <li><b>Maximum capacity</b>: The max number of definable patterns for one training pass is 5</li>
                         </ul>
-                    <h3 class="mb-4" style="margin-top: 3rem">Getting Started</h3>
+                    <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">Getting Started</h3>
                     <p>To begin using <span style="color: purple; font-weight: bold;">PETGUI</span>, please log in with your LDAP credentials for the <span style="font-style: italic">DieterichLab</span> server. <br>
                         If you encounter any issues during the login process or have any questions, please don't hesitate to <a href="mailto:petgui@support.com">contact our support team</a> for assistance.
                         </p>
                     <h4 class="mb-4" style="margin-top: 3rem;"> Thank you for visiting <span style="color: purple; font-weight: bold;">PETGUI</span>, and we hope you have a productive and enjoyable experience.</h4>
 
-                    <h3 class="mb-4" style="margin-top: 3rem">References</h3>
+                    <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">References</h3>
                     <ul style="margin-left: 17px; font-size: 15px;">
                         <li><a href="https://github.com/timoschick/pet/">Pattern-Exploiting Training (PET)</a></li>
                     </ul>
