--- a/templates/index.html
+++ b/templates/index.html
@@ -142,7 +142,7 @@ var dynamicInput_1 = [];
                                     <span class="checkmark"></span>
                                 </label>
                                 <label class="radio-container">medbertde
-                                    <input type="radio" name="model_para" value="GerMedBERT/medbert-512" required>
+                                    <input type="radio" name="model_para" value="/home/mhe/med_bert_local" required>
                                     <span class="checkmark"></span>
                                 </label>
                             </div>
