Modify Start and Correct Chart png call

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
       <div class="alert alert-danger">{{ error }}</div>
     {% endif %}
     <div id="chart-container" style="display: none">
-      <img id="myChart" src="/static/chart.png?version=2">
+      <img id="myChart" src="/static/chart.png">
     </div>
     <div id="stats-container"></div>
   </div>
