--- a/templates/start.html
+++ b/templates/start.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Colorlib Templates">
 
     <!-- Title Page-->
-    <title>Login</title>
+    <title>PETGUI</title>
 
     <!-- Icons font CSS-->
     <link href="/static/vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -95,7 +95,7 @@
                     <div id="col-1">
                         <figure>
                       <img src="static/pet.png" width="125%">
-                        <figcaption style="font-size: 12px">Fig.1 - https://arxiv.org/pdf/2001.07676.pdf</figcaption>
+                        <figcaption style="font-size: 12px"><a href="#schick">Fig.1 - Schick et al., 2021</a></figcaption>
                             </figure>
                     </div>
                     <div id="col-2">
@@ -116,15 +116,15 @@
                             <li>View <b>label distribution statistics</b> of training data and labeled data</li>
                         </ul>
                     <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">Getting Started</h3>
-                    <p>To begin using <span style="color: purple; font-weight: bold;">PETGUI</span>, please make sure you have a working WireGuard VPN connection to the <span style="font-style: italic">DieterichLab</span> infrastructure.
-                         To log in with your according LDAP credentials for the <span style="font-style: italic">DieterichLab</span> server, please click the button in the header section.
+                    <p style="font-size: 15px;">To begin using <span style="color: purple; font-weight: bold;">PETGUI</span>, please make sure you have a <strong>working WireGuard VPN connection</strong> to the <span style="font-style: italic">DieterichLab</span> infrastructure.
+                        To <a href="/login"><strong>log in</strong></a>, please use your LDAP credentials for the <span style="font-style: italic">DieterichLab</span> server.
                         </p>
                     <h4 class="mb-4" style="margin-top: 3rem;"> Thank you for visiting <span style="color: purple; font-weight: bold;">PETGUI</span>, and we hope you have a productive and enjoyable experience.</h4>
 
                     <h3 class="mb-4" style="margin-top: 3rem; background: rgb(86, 106, 238, 0.2);">References</h3>
                     <ul style="margin-left: 17px; font-size: 15px;">
-                        <li><span style="font-style: italic">Pattern-Exploiting Training (PET)</span>, https://github.com/timoschick/pet/</li>
-                        <li id="PET"><span style="font-style: italic">Exploiting Cloze Questions for Few-Shot Text Classification and Natural Language Inference</span>, Timo Schick and Hinrich Schütze, 2021, https://arxiv.org/abs/2001.07676</li>
+                        <li id="schick">Schick et al., 2021. Pattern-Exploiting Training (PET). <span style="font-style: italic">https://github.com/timoschick/pet/</span></li>
+                        <li>Schick et al., 2021. Exploiting Cloze Questions for Few-Shot Text Classification and Natural Language Inference. <span style="font-style: italic">https://arxiv.org/abs/2001.07676</span></li>
                     </ul>
 
 <!-- Jquery JS-->
